# denoising_diffusion

./: LICENSE  Makefile  README.md  pyproject.toml
denoising_diffusion/: __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
denoising_diffusion/modeling/: Trainer.py  dataset.py  predict.py  schedulers.py  train.py
denoising_diffusion/modeling/models/: composants.py  diffusion_process.py  unet.py
docs/: mkdocs.yml
docs/docs/: index.md
